# ophix-lang-fr-server-base

./: README.md  gen_version.py  pyproject.toml
src/ophix_lang_fr_server_base/: apps.py  settings.py
src/ophix_lang_fr_server_base/docs/: access-auditing.md  client-quickstart.md  sections.yaml  server-installation.md
src/ophix_lang_fr_server_base/locale/fr/LC_MESSAGES/: django.mo  django.po
